[package]
name = "staking-program"
version = "0.1.0"
description = "WANSOM Distributed Node Staking and Reputation Slashing Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
